--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
